tests/NormalTests/paczka1/small_fuzzy/35824274.err
Error in line 6: S886 S886 50,8
Error in line 5: Cne5lC3R S886 8,9
Error in line 11: AwKc@qK S585 23,8
